[project]
name = "PYield"
authors = [{ name = "Carlos Carvalho", email = "cr.cj@outlook.com" }]
description = "A Python library for analysis of fixed income instruments in Brazil"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["fixed-income", "brazil", "finance", "analysis", "bonds"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "polars[pyarrow]>=1.33.0",
    "lxml>=6.0.0",
    "pandas[html]>=2.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "tenacity>=9.0.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/crdcj/PYield"

[dependency-groups]
dev = [
    "python-dotenv",
    "ipykernel",
    "pytest",
    "pyright",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
    "types-requests",    
    "lxml-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyield/__about__.py"

[tool.hatch.build.targets.sdist]
only-include = ["pyield"]

[tool.uv]
package = true