[project]
name = "pyield"
authors = [{ name = "Carlos Carvalho", email = "cr.cj@outlook.com" }]
description = "A Python library for analysis of fixed income instruments in Brazil"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["fixed-income", "brazil", "finance", "analysis", "bonds"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "polars>=1.39.0",
    "lxml>=6.0.0",
    "requests>=2.31.0",    
    "fastexcel>=0.19.0",
]
version = "0.49.0"

[project.urls]
Homepage = "https://github.com/crdcj/PYield"
Documentation = "https://crdcj.github.io/PYield"
Source = "https://github.com/crdcj/PYield"
"Bug Tracker" = "https://github.com/crdcj/PYield/issues"

[dependency-groups]
dev = [
    "python-dotenv[cli]",
    "ipykernel",
    "pytest",
    "pyright",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "types-requests",
    "lxml-stubs",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pyield"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests", "pyield"]
addopts = "--doctest-modules"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = ["E501", "W505"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.format]
docstring-code-format = true
